--- a/ucheb.html
+++ b/ucheb.html
@@ -34,9 +34,9 @@
             </div>
             <div class = "katal">
                 <div class = "uch"> 
-                    <div class = "uch-item"> <img src="5класс/мат5.jpeg" alt=""> </div>
-                    <div class = "uch-item"> <img src="5класс/сахтыл5.jpeg" alt=""></div>
-                    <div class = "uch-item"> <img src="5класс/торлит1 5.jpeg" alt=""></div>
+                    <div class = "uch-item"> <img src="мат5.jpeg" alt=""> </div>
+                    <div class = "uch-item"> <img src="сахтыл5.jpeg" alt=""></div>
+                    <div class = "uch-item"> <img src="торлит1 5.jpeg" alt=""></div>
                 </div>
                 <div class = "podpis">
                     <div class = "pod-item"> 
