--- a/ucheb.html
+++ b/ucheb.html
@@ -50,9 +50,9 @@
                     <div class = "pod-item"> Төрөөбүт литература 1 чааһа</div>
                 </div>
                 <div class = "uch"> 
-                    <div class = "uch-item"> <img src="5класс/торлит2 5.jpeg" alt=""> </div>
+                    <div class = "uch-item"> <img src="торлит2 5.jpeg" alt=""> </div>
                     <div class = "uch-item"> </div>
-                    <div class = "uch-item"> <img src="5класс/геогр5.jpeg" alt=""></div>
+                    <div class = "uch-item"> <img src="геогр5.jpeg" alt=""></div>
                 </div>
                 <div class = "podpis">
                     <div class = "pod-item"> Төрөөбүт литература 2 чааһа</div>
@@ -60,9 +60,9 @@
                     <div class = "pod-item"> География</div>
                 </div>
                 <div class = "uch"> 
-                    <div class = "uch-item"> <img src="5класс/изо5.jpeg" alt=""> </div>
-                    <div class = "uch-item"><img src="5класс/лит1 5.jpeg" alt=""> </div>
-                    <div class = "uch-item"> <img src="5класс/лит2 5.jpeg" alt=""></div>
+                    <div class = "uch-item"> <img src="изо5.jpeg" alt=""> </div>
+                    <div class = "uch-item"><img src="лит1 5.jpeg" alt=""> </div>
+                    <div class = "uch-item"> <img src="лит2 5.jpeg" alt=""></div>
                 </div>
                 <div class = "podpis">
                     <div class = "pod-item"> Изобразительное искусство </div>
@@ -70,9 +70,9 @@
                     <div class = "pod-item"> Русская литература 2 часть </div>
                 </div>
                 <div class = "uch"> 
-                    <div class = "uch-item"> <img src="5класс/рус яз 1 5.jpeg" alt=""></div>
-                    <div class = "uch-item"> <img src="5класс/русяз 2 5.jpeg" alt=""></div>
-                    <div class = "uch-item"> <img src="5класс/муз5.jpeg" alt=""></div>
+                    <div class = "uch-item"> <img src="рус яз 1 5.jpeg" alt=""></div>
+                    <div class = "uch-item"> <img src="русяз 2 5.jpeg" alt=""></div>
+                    <div class = "uch-item"> <img src="муз5.jpeg" alt=""></div>
                 </div>
                 <div class = "podpis">
                     <div class = "pod-item"> Русский язык 1 часть </div>
@@ -80,9 +80,9 @@
                     <div class = "pod-item"> Музыка</div>
                 </div>
                 <div class = "uch"> 
-                    <div class = "uch-item"> <img src="5класс/англ5.jpeg" alt=""></div>
-                    <div class = "uch-item"> <img src="5класс/история5.jpeg" alt=""></div>
-                    <div class = "uch-item"> <img src="5класс/биология.jpeg" alt=""></div>
+                    <div class = "uch-item"> <img src="англ5.jpeg" alt=""></div>
+                    <div class = "uch-item"> <img src="история5.jpeg" alt=""></div>
+                    <div class = "uch-item"> <img src="биология.jpeg" alt=""></div>
                 </div>
                 <div class = "podpis">
                     <div class = "pod-item"> Английский язык</div>
@@ -90,8 +90,8 @@
                     <div class = "pod-item"> Биология </div>
                 </div>
                 <div class = "uch"> 
-                    <div class = "uch-item"> <img src="5класс/техн5.jpeg" alt=""></div>
-                    <div class = "uch-item"> <img src="5класс/естествознание.jpeg" alt=""></div>
+                    <div class = "uch-item"> <img src="техн5.jpeg" alt=""></div>
+                    <div class = "uch-item"> <img src="естествознание.jpeg" alt=""></div>
                 </div>
                 <div class = "podpis">
                     <div class = "pod-item"> Технология </div>
