--- a/rli.html
+++ b/rli.html
@@ -22,6 +22,11 @@
                 <a class="tolya-item" href="rli.html">РЛИ</a>
             </div>
         </div>
+        <div class = "poisk2">
+            <div class = "button">
+                <a class="mitya2" href="https://rlilibrary2.wordpress.com/"> перейти </a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
