--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
                 <a class="mitya" href="ucheb.html">классы</a>
             </div>
         </div>
-       
+       <div class = "kont">
+
+       </div>
     </div>
 </body>
 </html>
